# py-schematron-validator

./: .gitmodules  Makefile  README.md  pyproject.toml  requirements-test.txt  test.py
.github/workflows/: main.yml
pyschval/: __init__.py  config.py  main.py  utils.py
pyschval/schematron/: create.py  extract.py  validate.py
pyschval/schematron/model/: svrl.py
pyschval/types/: error.py  result.py
tests/: conftest.py  test_config.py  test_main.py  test_utils.py
tests/schematron/: test_create.py  test_extract.py  test_validate.py
tests/schematron/model/: test_svrl.py
tests/types/: test_result.py
xslt/: extract_sch.xsl
