[tool.poetry]
name = "pyschval"
version = "1.0.0"
description = "A python based wrapper around saxon and schxslt"
authors = ["Bpolitycki <bastian.politycki@unisg.ch>"]
readme = "README.md"
packages = [{ include = "pyschval" }]
include = [
    { path = "xslt/schxslt/core/src/main/resources/xslt/2.0", format = [
        "sdist",
        "wheel",
    ] },
    { path = "xslt/*.xsl", format = [
        "sdist",
        "wheel",
    ] },
]

[tool.poetry.dependencies]
python = "^3.9"
saxonche = "^12.4.0"
parsel = "^1.8.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pyright = "^1.1.292"
pytest = "^7.2.1"
saxonche-stubs = "^0.6.0"

[tool.pyright]
include = ["*.py"]
exclude = ["**/__pycache__"]
reportMissingImports = true

[tool.ruff]
select = ["E", "F", "I001"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
